<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/registrationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_registration_profile_registration_text_view_text"
        android:textSize="@dimen/fragment_registration_profile_registration_text_view_text_size"
        app:layout_constraintBottom_toTopOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/fragment_registration_profile_email_text_hint"
        android:inputType="textEmailAddress"
        android:minWidth="@dimen/fragment_registration_profile_email_min_width"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registrationTitle" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:hint="@string/fragment_registration_profile_password_text_hint"
        android:inputType="textPassword"
        android:minWidth="@dimen/fragment_registration_profile_password_min_width"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/email" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_registration_profile_back_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toStartOf="@id/registrationButton"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="ButtonStyle" />

    <Button
        android:id="@+id/registrationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_registration_profile_registration_button_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/backButton"
        app:layout_constraintTop_toBottomOf="@id/password"
        tools:ignore="ButtonStyle" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="335dp" />

</android.support.constraint.ConstraintLayout>